--- a/Packages/DelphiXE3/DSharp.Core.dproj
+++ b/Packages/DelphiXE3/DSharp.Core.dproj
@@ -180,6 +180,8 @@
         <DCCReference Include="..\..\Source\Core\DSharp.Core.VirtualClass.pas"/>
         <DCCReference Include="..\..\Source\Core\DSharp.Core.VirtualInterface.pas"/>
         <DCCReference Include="..\..\Source\Logging\DSharp.Logging.pas"/>
+        <DCCReference Include="..\..\Source\Core\ObjAutoPatch.pas"/>
+        <DCCReference Include="..\..\Source\Core\PatchUtils.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
