--- a/Packages/DelphiXE3/DSharp.Core.dproj
+++ b/Packages/DelphiXE3/DSharp.Core.dproj
@@ -182,6 +182,7 @@
         <DCCReference Include="..\..\Source\Logging\DSharp.Logging.pas"/>
         <DCCReference Include="..\..\Source\Core\ObjAutoPatch.pas"/>
         <DCCReference Include="..\..\Source\Core\PatchUtils.pas"/>
+        <DCCReference Include="..\..\Source\Core\RttiPatch.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
