--- a/Packages/DelphiXE5/DSharp.PresentationModel.dproj
+++ b/Packages/DelphiXE5/DSharp.PresentationModel.dproj
@@ -218,6 +218,7 @@
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.NotifyPropertyChangedExIntf.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.PropertyChangedBase.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.Execute.pas"/>
+        <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.CloseStrategyIntf.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
