--- a/Packages/DelphiXE5/DSharp.PresentationModel.dproj
+++ b/Packages/DelphiXE5/DSharp.PresentationModel.dproj
@@ -222,6 +222,8 @@
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.ResultCompletionEventArgsIntf.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.ResultCompletionEventArgs.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.ResultBase.pas"/>
+        <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.ParentIntf.pas"/>
+        <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.HaveActiveItemIntf.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
