--- a/Packages/DelphiXE5/DSharp.PresentationModel.dproj
+++ b/Packages/DelphiXE5/DSharp.PresentationModel.dproj
@@ -228,6 +228,7 @@
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.ActionExecutionContextIntf.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.CoroutineExecutionContextIntf.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.WindowManagerIntf.pas"/>
+        <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.DefinesBindingsIntf.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
