--- a/Packages/DelphiXE/DSharp.PresentationModel.dproj
+++ b/Packages/DelphiXE/DSharp.PresentationModel.dproj
@@ -151,6 +151,7 @@
 			<DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.DefinesBindingsIntf.pas"/>
 			<DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.SpringBootstrapper.pas"/>
 			<DCCReference Include="..\..\Source\PresentationModel\Actions.pas"/>
+			<DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.RegExHelper.pas"/>
 			<BuildConfiguration Include="Debug">
 				<Key>Cfg_2</Key>
 				<CfgParent>Base</CfgParent>
