--- a/Packages/DelphiXE5/DSharp.PresentationModel.dproj
+++ b/Packages/DelphiXE5/DSharp.PresentationModel.dproj
@@ -230,6 +230,7 @@
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.WindowManagerIntf.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.DefinesBindingsIntf.pas"/>
         <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.SpringBootstrapper.pas"/>
+        <DCCReference Include="..\..\Source\PresentationModel\DSharp.PresentationModel.RegExHelper.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
